# sciffer-rs

./: .env.example  Cargo.toml  README.md  config.toml
benches/: sniffer_benchmark.rs
prompts/: topic.pt
src/: agent.rs  config.rs  lib.rs  log.rs  main.rs  sciffer.rs
src/analyzers/: mod.rs  simple.rs
src/dao/: keyword.rs  mod.rs  paper.rs  paper_keyword.rs
src/db/: mod.rs
src/extracters/: mod.rs  topic.rs
src/fetchers/: arxiv.rs  mod.rs
src/models/: mod.rs  paper.rs
src/tools/: parser.rs
tests/: test_arixv_api.rs  test_d_type.rs  test_langchain.rs  test_simple_analyzer.rs
