[package]
name = "sciffer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "*"
rand = "*"
serde_json = "1.0.138"
langchain-rust = { version = "4.6.0", features = ["ollama"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3"
arxiv-rs = "0.1.5"
anyhow = "1.0.95"
derive_builder = "0.20.2"
regex = "1.11.1"
dotenv = "0.15.0"
async-openai = "0.27.2"
clap = { version = "4.5.29", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
async-trait = "0.1.86"
chrono = "0.4.40"
log = "0.4.25"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures"] }
chrono = "*"

[[bench]]
name = "sniffer_benchmark"
harness = false
